Queda funcionando al 100% la sincronización de metas, quedan corregidos todos los bugs que duplicaban metas, listos los progresos y la pantalla de bienvenida y sus textos con los circulos de ubicación

--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -11,6 +11,40 @@
         android:layout_width="match_parent"
         ></android.support.v4.view.ViewPager>
     <LinearLayout
+        android:layout_marginBottom="80dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_marginRight="8dp"
+            android:id="@+id/inicio_icono_circulo_1"
+            android:src="@drawable/icono_circulo"
+            android:layout_width="12dp"
+            android:layout_height="12dp" />
+        <ImageView
+            android:alpha=".4"
+            android:layout_marginRight="8dp"
+            android:id="@+id/inicio_icono_circulo_2"
+            android:src="@drawable/icono_circulo"
+            android:layout_width="12dp"
+            android:layout_height="12dp" />
+        <ImageView
+            android:alpha=".4"
+            android:layout_marginRight="8dp"
+            android:id="@+id/inicio_icono_circulo_3"
+            android:src="@drawable/icono_circulo"
+            android:layout_width="12dp"
+            android:layout_height="12dp" />
+        <ImageView
+            android:alpha=".4"
+            android:id="@+id/inicio_icono_circulo_4"
+            android:src="@drawable/icono_circulo"
+            android:layout_width="12dp"
+            android:layout_height="12dp" />
+    </LinearLayout>
+    <LinearLayout
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:layout_width="match_parent"
