--- a/app/src/main/res/layout/fragment_perfil_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil_perfil.xml
@@ -15,7 +15,6 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="230dp">
-
                     <ImageView
                         android:scaleType="centerCrop"
                         android:id="@+id/perfil_imagen_miembro"
@@ -23,8 +22,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="230dp" />
                     <ImageView
+                        android:scaleType="centerCrop"
                         android:layout_alignParentBottom="true"
                         android:id="@+id/perfil_imagen_degradado"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <ImageView
+                        android:scaleType="centerCrop"
+                        android:layout_alignParentTop="true"
+                        android:id="@+id/perfil_imagen_degradado_superior"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                     <TextView
