--- a/app/src/main/res/layout/fragment_inicio_4.xml
+++ b/app/src/main/res/layout/fragment_inicio_4.xml
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:layout_gravity="center"
         android:textSize="18sp"
-        android:text="Un proyecto que conecta tu vida con el deporte"
+        android:text="Encuentra eventos deportivos"
         android:textColor="#FFFFFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -32,7 +32,7 @@
         android:layout_marginTop="15dp"
         android:gravity="center"
         android:layout_gravity="center"
-        android:text="Más texto de relleno"
+        android:text="Encuentra y asiste a eventos deportivos de tu interés, recibe notificaciones personalizadas según tus preferencias"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         android:layout_width="wrap_content"
