--- a/app/src/main/res/layout/item_lista_meta.xml
+++ b/app/src/main/res/layout/item_lista_meta.xml
@@ -12,7 +12,6 @@
         android:layout_height="30dp" />
 
     <LinearLayout
-
         android:background="#FFFFFF"
         android:id="@+id/item_meta_clic_item"
         android:orientation="vertical"
@@ -46,6 +45,8 @@
                 android:layout_height="wrap_content" />
         </RelativeLayout>
         <LinearLayout
+            android:visibility="visible"
+            android:id="@+id/item_meta_meta_en_progreso"
             android:gravity="center"
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -113,7 +114,37 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-
+        </LinearLayout>
+        <!-- Este linear layou es cuando la meta ha sido terminada -->
+        <LinearLayout
+            android:visibility="gone"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:id="@+id/item_meta_meta_terminada"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/item_meta_nombre_meta_terminada"
+                android:layout_marginBottom="5dp"
+                android:textSize="17sp"
+                android:text="Nombre de la meta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/item_meta_medida_terminada"
+                android:textSize="27sp"
+                android:gravity="center"
+                android:text="65Kg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginTop="5dp"
+                android:textSize="14sp"
+                android:gravity="center"
+                android:text="Meta terminada"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     <TextView
         android:alpha=".1"
