--- a/app/src/main/res/layout/filtro_busqueda_espacio.xml
+++ b/app/src/main/res/layout/filtro_busqueda_espacio.xml
@@ -25,8 +25,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:alpha=".8"
-        android:textSize="18sp"
+        android:gravity="center"
+        android:textSize="17sp"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textColor="#000000"
@@ -34,12 +37,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Switch
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
         android:alpha=".8"
-        android:textSize="18sp"
+        android:textSize="17sp"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textColor="#000000"
