--- a/app/src/main/res/layout/fragment_buscar_espacio.xml
+++ b/app/src/main/res/layout/fragment_buscar_espacio.xml
@@ -32,23 +32,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <LinearLayout
+                    android:gravity="center"
                     android:id="@+id/buscar_espacio_layout_click_filtro"
                     android:orientation="vertical"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
-                    <TextView
-                        android:paddingBottom="5dp"
-                        android:paddingTop="5dp"
-                        android:paddingRight="20dp"
-                        android:paddingLeft="20dp"
-                        android:text="Buscar actividad"
-                        android:background="#FFFFFF"
-                        android:textSize="14sp"
+                    <RelativeLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:layout_marginLeft="4dp"
+                            android:foregroundGravity="center"
+                            android:id="@+id/buscar_espacio_globo_busqueda"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:paddingBottom="2dp"
+                            android:paddingTop="5dp"
+                            android:paddingRight="20dp"
+                            android:paddingLeft="20dp"
+                            android:text="Buscar actividad"
+                            android:textSize="14sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </RelativeLayout>
                     <ImageView
+                        android:foregroundGravity="center"
                         android:id="@+id/buscar_espacio_marker_central"
                         android:layout_gravity="center"
                         android:layout_width="35dp"
