--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <ImageView
+                android:visibility="invisible"
                 android:layout_marginRight="15dp"
                 android:layout_alignParentRight="true"
                 android:id="@+id/perfil_barra_agregar_deporte"
