--- a/app/src/main/res/layout/filtro_busqueda_espacio.xml
+++ b/app/src/main/res/layout/filtro_busqueda_espacio.xml
@@ -38,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Switch
+        android:id="@+id/filtro_busqueda_actividades_preferencia"
         android:checked="true"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
