Se arreglan varios bugs, ya descarga mejor las imagenes, se refresca el evento, se corrigen algunas cosas de las notificaciones, se agrega la notificación separada y se agrega la bienvenida y los letreros de ayuda

--- a/app/src/main/res/layout/filtro_busqueda_espacio.xml
+++ b/app/src/main/res/layout/filtro_busqueda_espacio.xml
@@ -21,7 +21,7 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
-        android:text="Utiliza los filtros de búsqueda para encontras el espacio deportivo más adecuado para ti"
+        android:text="Utiliza el filtro de búsqueda para encontra el evento o los espacios deportivos de tu preferencia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
