--- a/app/src/main/res/layout/sliding_buscar_actividades_evento.xml
+++ b/app/src/main/res/layout/sliding_buscar_actividades_evento.xml
@@ -155,6 +155,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="160dp">
                 <ImageView
+                    android:id="@+id/sliding_imagen_evento"
                     android:layout_marginRight="30dp"
                     android:layout_marginLeft="30dp"
                     android:alpha=".2"
