Se termina la primer parte para el evento del 12 de abril.

--- a/app/src/main/res/layout/activity_selecciona_deportes.xml
+++ b/app/src/main/res/layout/activity_selecciona_deportes.xml
@@ -187,7 +187,7 @@
                 android:alpha=".87"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp"
-                android:text="Volleyball"
+                android:text="Voleibol"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
