Se cambia el mapa de eventos por la lista, casi está completado

--- a/app/src/main/res/layout/fragment_buscar_evento.xml
+++ b/app/src/main/res/layout/fragment_buscar_evento.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#E6E6E6">
+    <ListView
+        android:id="@+id/fragment_buscar_evento_lista"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 
-    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    <!--<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
         android:id="@+id/buscar_evento_sliding_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,7 +18,7 @@
         sothree:umanoPanelHeight="100dp"
         sothree:umanoShadowHeight="4dp">
 
-        <!-- AQUÍ DENTRO VA LO DEL MAPA -->
+        - AQUÍ DENTRO VA LO DEL MAPA -
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -61,10 +66,10 @@
                 </LinearLayout>
             </RelativeLayout>
 
-            <!-- AQUÍ DENTRO VA TODO LO QUE SE VEA DENTRO DEL ACTIVITY-->
+            - AQUÍ DENTRO VA TODO LO QUE SE VEA DENTRO DEL ACTIVITY-
         </RelativeLayout>
 
-        <!-- SLIDING LAYOUT AQUÍ NO VA NADA DEL MAPA-->
+        - SLIDING LAYOUT AQUÍ NO VA NADA DEL MAPA-
         <LinearLayout
             android:background="#FFFFFF"
             android:id="@+id/dragView"
@@ -76,4 +81,5 @@
             <include layout="@layout/sliding_buscar_actividades_evento"/>
         </LinearLayout>
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+    -->
 </RelativeLayout>
