Cambios para la lista de eventos en lugar del mapa

--- a/app/src/main/res/layout/lista_mes_eventos.xml
+++ b/app/src/main/res/layout/lista_mes_eventos.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
+        android:id="@+id/item_mes_eventos_mes"
         android:background="#FFFFFF"
         android:layout_marginLeft="20dp"
         android:alpha=".7"
