--- a/app/src/main/res/layout/activity_nuevo_evento.xml
+++ b/app/src/main/res/layout/activity_nuevo_evento.xml
@@ -39,13 +39,39 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <ImageView
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/antorcha_con_nombre_opt"
+                android:layout_width="100dp"
+                android:layout_height="100dp" />
             <TextView
-                android:textSize="15sp"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="25dp"
+                android:alpha=".8"
+                android:textColor="#000000"
+                android:layout_marginTop="10dp"
+                android:text="Con Antorcha podrás registrar tus propios eventos para que así todos se enteren. Sólo debes llenar los datos del formulario y seguir las instrucciones"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:alpha="0.1"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="25dp"
+                android:background="#000000"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp" />
+
+            <TextView
+                android:textSize="14sp"
                 android:layout_marginBottom="15dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:alpha=".87"
                 android:textColor="#000000"
-                android:text="Nombre"
+                android:text="Nombre del evento"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -62,12 +88,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="37dp" />
             <TextView
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="30dp"
                 android:alpha=".87"
                 android:textColor="#000000"
-                android:text="Descripción"
+                android:text="Una descripción breve pero clara"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -84,12 +110,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="62dp" />
             <TextView
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="30dp"
                 android:alpha=".87"
                 android:textColor="#000000"
-                android:text="Lugar del evento"
+                android:text="Domicilio del evento"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -106,20 +132,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="37dp" />
             <TextView
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="30dp"
                 android:alpha=".87"
                 android:textColor="#000000"
-                android:text="Fecha del evento"
+                android:text="Fecha que iniciará evento"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-            <DatePicker
+            <TextView
+                android:id="@+id/nuevo_evento_fecha"
+                android:layout_marginRight="60dp"
+                android:layout_marginLeft="60dp"
+                android:gravity="center"
+                android:background="@drawable/edittext_diseno"
+                android:text="Selecciona la fecha"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"></DatePicker>
+                android:layout_height="37dp" />
+            <TextView
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
+                android:background="@color/colorPrimary"
+                android:id="@+id/nuevo_evento_siguiente"
+                android:layout_marginRight="30dp"
+                android:layout_marginLeft="30dp"
+                android:gravity="center"
+                android:textColor="#FFFFFF"
+                android:text="Siguiente"
+                android:layout_width="match_parent"
+                android:layout_height="37dp" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
