--- a/app/src/main/res/layout/fragment_buscar_evento.xml
+++ b/app/src/main/res/layout/fragment_buscar_evento.xml
@@ -7,6 +7,27 @@
         android:id="@+id/fragment_buscar_evento_lista"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></ListView>
+    <RelativeLayout
+        android:id="@+id/fragment_buscar_evento_agregar"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:background="#FFFFFF"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/agregar"
+            android:layout_width="90dp"
+            android:layout_height="90dp" />
+    </RelativeLayout>
 
     <!--<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
         android:id="@+id/buscar_evento_sliding_layout"
