--- a/app/src/main/res/layout/activity_selecciona_ubicacion.xml
+++ b/app/src/main/res/layout/activity_selecciona_ubicacion.xml
@@ -50,6 +50,25 @@
             android:layout_width="match_parent"
             android:id="@+id/seleccionar_ubicacion_mapa"/>
         <RelativeLayout
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:background="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="80dp">
+            <TextView
+                android:gravity="center"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="sans-serif-light"
+                android:textSize="14sp"
+                android:text="El pin naranja debe quedar en el lugar donde se realizará el evento."
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+        <RelativeLayout
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
