--- a/app/src/main/res/layout/item_lista_eventos.xml
+++ b/app/src/main/res/layout/item_lista_eventos.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
+            android:src="@drawable/default_evento"
             android:layout_marginLeft="5dp"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
